--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
       {
         "label": "Build with Clang",
         "type": "shell",
-        "command": "clang++",
+        "command": "/usr/bin/clang++",
         "args": [
           "${file}",
                 "-std=c++17",
